--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,13 +2,13 @@
 spring.jpa.hibernate.ddl-auto=update
 spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/laptopshop
 spring.datasource.username=root
-spring.datasource.password=Vuong180700
+spring.datasource.password=123456
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.show-sql: true
 
 #config spring security
 spring.security.user.name=hoidanit
-spring.security.user.password=123456
+# spring.security.user.password=123456
 
 #config view engine
 # spring.mvc.view.prefix=/WEB-INF/view/
