--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -19,3 +19,6 @@ spring.servlet.multipart.max-file-size=50MB
 
 #default = 10 MB (form data)
 spring.servlet.multipart.max-request-size=50MB
+
+logging.level.org.springframework.security=DEBUG
+
