--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,7 @@
 spring.jpa.hibernate.ddl-auto=update
 spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/laptopshop
 spring.datasource.username=root
-spring.datasource.password=123456
+spring.datasource.password=Vuong180700
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.show-sql: true
 
@@ -21,4 +21,12 @@ spring.servlet.multipart.max-file-size=50MB
 spring.servlet.multipart.max-request-size=50MB
 
 logging.level.org.springframework.security=DEBUG
+
+#Config session
+spring.session.store-type=jdbc
+spring.session.timeout=30m
+
+spring.session.jdbc.initialize-schema=always
+#server.servlet.session.timeout
+#spring.session.jdbc.table-name=SPRING_SESSION
 
